# hexlet-hello-world

./: pyproject.toml
hexlet_hello_world/: example.py
